<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/notification_ic"
        android:title="@string/title_store" />

    <item
        android:id="@+id/navigation_contracts"
        android:icon="@drawable/notification_ic"
        android:title="@string/title_bidcontracts" />

    <item
        android:id="@+id/navigation_poultry"
        android:icon="@drawable/notification_ic"
        android:title="@string/title_poultryprices" />

</menu>
